# seed-vc

./: .gitignore  main.py  pyproject.toml  メモ
